hphp/hack/test/typecheck/wrong_fixme_format.php
<?hh // partial

class :ui<T> {

}


class :g extends :ui<int> {
  /* HH_FIXME4110 */
}
